[package]
name = "arvo"
version = "0.1.0"
authors = ["jrw"]
build = "build.rs"

[build-dependencies]
gcc = "*"

[build-dependencies.lalrpop]
git = "https://github.com/nikomatsakis/lalrpop"

[dependencies]
libc = "*"

[dependencies.lalrpop-util]
git = "https://github.com/nikomatsakis/lalrpop"

[lib]
name = "arvo"
path = "src/arvo/lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "arvo"
path = "src/bin/arvo.rs"
test = false
doc  = false
